[package]
name = "aws-sign-v4"
version = "0.2.0"
description = "Generate AWS Signature 4 headers easily"
repository = "https://github.com/psnszsn/aws-sign-v4"
keywords = ["AWS", "Signature"]
license = "BSD-2-Clause"
readme = "README.md"
authors = ["Vlad Pănăzan <brgdvz@gmail.com>", "Ken Shih <ken.shih@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.27"
url = "2.5.0"
hex = "0.4.3"
ring = "0.17.8"
http = "1.1.0"
sha256 = "1.5.0"
